<resources>
    <string name="app_name">Redder</string>
    <string name="orangeIcon">orangeIcon</string>
    <string name="whiteIcon">whiteIcon</string>
    <string name="logo_dark">logo_dark</string>
    <string name="goto_signin">Signin</string>
    <string name="email_address">Email Address</string>
    <string name="login_btn">Login</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="signup_link">Don\'t have an Account?</string>
    <string name="signupLink">Sign Up</string>
    <string name="continueGoogle">Continue with Google</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address_signin">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="sign_in_link">Sign in</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">874829648572-blsgq77v3tvsj462ielefah9n9v5ac4b.apps.googleusercontent.com</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
</resources>