<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:src="@drawable/logo_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input_rounded"
        android:hint="@string/first_name"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/black_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize"
        android:autofillHints="First Name" />

    <EditText
        android:id="@+id/lName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input_rounded"
        android:hint="@string/last_name"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/black_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fName"
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize"
        android:autofillHints="Last Name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input_rounded"
        android:hint="@string/email_address_signin"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/black_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lName"
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_input_rounded"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColorHint="@color/black_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        tools:ignore="RtlSymmetry,TextFields,VisualLintTextFieldSize"
        android:autofillHints="password" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_btn"
        android:text="@string/sign_in"
        app:layout_constraintLeft_toLeftOf="@id/password"
        app:layout_constraintRight_toRightOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/alreadyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="@id/signInBtn"
        app:layout_constraintRight_toRightOf="@id/signInBtn"
        app:layout_constraintTop_toBottomOf="@id/signInBtn">

        <TextView
            android:id="@+id/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_link"
            android:textColor="@color/orange" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input_rounded"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/alreadyLayout"
        app:layout_goneMarginTop="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="38dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                app:srcCompat="@drawable/google_icon"
                android:contentDescription="GoogleIcon" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/signInWithGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up_with_google" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>